envoy-front-cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-httpbin
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 80
          filter_chains:
              - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: envoy-httpbin
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/httpbin" }
                              route: { cluster: envoy-httpbin }
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config: 
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: envoy-httpbin
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: round_robin
          load_assignment:
            cluster_name: envoy-httpbin
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8786
      health_checks:
          timeout: 1s
          interval: 10s
          unhealthy_threshold: 2
          healthy_threshold: 2
    admin:
      access_log_path: "/dev/stdout"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
